data/derived/sp14/progs/unify/prog3564.ml.out
Characters 77-87:
  else let l = digitsOfInt (n/10) :: (n mod 10) in
                                     ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list list
